@@ -325,18 +325,18 @@ table.mw_metadata {
 	background: white;
 	border-collapse: collapse;
 }
-.wikitable th, .wikitable td,
+table.wikitable > tr > th, table.wikitable > tr > td,
 .mw_metadata th, .mw_metadata td {
 	border: 1px #aaa solid;
 	padding: 0.2em;
 }
-.wikitable th,
+table.wikitable > tr > th,
 .mw_metadata th {
 	text-align: center;
 	background: white;
 	font-weight: bold;
 }
-.wikitable caption,
+table.wikitable > caption,
 .mw_metadata caption {
 	font-weight: bold;
 }
